@@ -1,3 +1,8 @@
+2022-03-07  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
+
+	* fwrite.c: output to file instead of accumulating too much.
+	https://github.com/texjporg/tex-jp-build/issues/137
+
 2022-01-18  Karl Berry  <karl@freefriends.org>
 
 	* COPYRIGHT,
